SqlStorage hw15 addSectionToResume